Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/master_mobiloapp.yml
+++ b/.github/workflows/master_mobiloapp.yml
@@ -40,22 +40,13 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
           name: .net-app
       
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_66B93EAF5185467696B99657AFF3A1D3 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_7B6886E32AA6499A972BCB76FC63FF47 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_278248DF928842A78671D68EDE5FB49A }}
-
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
@@ -63,4 +54,4 @@ jobs:
           app-name: 'mobiloapp'
           slot-name: 'Production'
           package: .
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B1F39B40D6DC48F696DC8DBA61138B78 }}
